--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,5 +5,6 @@
   <%= @order.total %>
 </p>
 
-<%= link_to 'Edit', edit_order_path(@order) %> |
 <%= link_to 'Back', orders_path %>
+<%= link_to 'Authorize', authorize_order_path(@order) %>
+<%= link_to 'Capture', capture_order_path(@order) %>
